# investment-agent

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  README_CN.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
config/: config.yaml
docs/: ARCHITECTURE.md  OPEN_SOURCE_GUIDE.md
examples/: backtest_demo.py  custom_strategy.py
scripts/: run_backtest_agent.py  run_multimarket_paper.py  run_paper_trading.py  run_paper_trading_real.py  test_xiaomi_e2e.py
src/investment_agent/: __init__.py  agent.py  main.py
src/investment_agent/backtest/: __init__.py  engine.py  metrics.py
src/investment_agent/cli/: dashboard.py
src/investment_agent/core/: __init__.py  types.py
src/investment_agent/data/: __init__.py  akshare_provider.py  mock_provider.py  provider.py  unified_provider.py
src/investment_agent/execution/: __init__.py  broker.py  risk.py
src/investment_agent/llm/: __init__.py  adapter.py  prompts.py
src/investment_agent/memory/: __init__.py  rag_memory.py
src/investment_agent/ml/: __init__.py  features.py  predictor.py
src/investment_agent/orchestrator/: __init__.py  agent_orchestrator.py
src/investment_agent/sensors/: __init__.py  akshare_sensor.py  base.py  macro_sensor.py  multimarket_sensor.py  news_sensor.py
src/investment_agent/simulation/: __init__.py  paper_trading.py
src/investment_agent/skills/: __init__.py  base.py  macro_skill.py  mock_skill.py  news_skill.py  portfolio_skill.py  react_skill.py
src/investment_agent/strategy/: __init__.py  agent_strategy.py  base.py  mean_reversion.py  momentum.py
src/investment_agent/web/: app.py
src/investment_agent/web/static/: index.html
strategies/: example_ml_strategy.py
tests/: test_agent.py  test_agent_strategy.py  test_akshare_sensor.py  test_backtest.py  test_broker.py  test_core_types.py  test_data.py  test_llm.py  test_ml.py  test_mock_skill.py  test_multimarket_sensor.py  test_orchestrator.py  test_paper_trading.py  test_rag_memory.py  test_react_skill.py  test_risk.py  test_sensors.py  test_skills.py  test_strategy.py  test_unified_provider.py  test_web_app.py
